amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-extension.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-extension.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
